--- a/frontend/src/components/Footer/Footer.scss
+++ b/frontend/src/components/Footer/Footer.scss
@@ -1,24 +1,25 @@
+@mixin flex($dFlex, $fWrap, $fDirection, $jContent, $aItems) {
+  display: $dFlex;
+  flex-wrap: $fWrap;
+  flex-direction: $fDirection;
+  justify-content: $jContent;
+  align-items: $aItems;
+}
+
 $main-color: rgb(217, 81, 81);
-$background: rgb(48, 48, 48);
+$background: rgb(30, 29, 29);
 $border-white: #fff;
 
 .footer {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+  @include flex(flex, wrap, row, space-between, center);
   width: 100%;
   height: 280px;
   background-color: $background;
-  padding: 0 25px;
+  padding: 0 45px;
   color: #fff;
 
   &__download {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center;
+    @include flex(flex, wrap, column, space-evenly, center);
     gap: 20px;
 
     &--title {
@@ -64,10 +65,7 @@ $border-white: #fff;
     }
 
     .socials {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+      @include flex(flex, wrap, column, center, center);
       margin: 20px 0;
       gap: 15px;
 
