--- a/frontend/src/components/Footer/Footer.scss
+++ b/frontend/src/components/Footer/Footer.scss
@@ -22,24 +22,24 @@ $border-white: #fff;
     @include flex(flex, wrap, column, space-evenly, center);
     gap: 20px;
 
-    &--title {
+    &__title {
       font-size: 17px;
       font-weight: bold;
       border-bottom: 1px solid $border-white;
     }
 
-    &--parrafo {
+    &__parrafo {
       text-align: center;
       font-size: 16px;
     }
 
-    &--img {
+    &__img {
       width: 170px;
     }
   }
 
   &__header {
-    &--title {
+    &__title {
       text-align: center;
       font-size: 60px;
       letter-spacing: 3px;
@@ -47,7 +47,7 @@ $border-white: #fff;
       margin: 10px 0;
     }
 
-    &--span {
+    &__span {
       display: block;
       font-size: 13px;
       text-align: center;
@@ -56,7 +56,7 @@ $border-white: #fff;
   }
 
   &__links {
-    &--title {
+    &__title {
       text-align: center;
       font-size: 22px;
       width: 120px;
@@ -106,27 +106,27 @@ $border-white: #fff;
 @media screen and (max-width: 380px) {
   .footer {
     &__header {
-      &--title {
+      &__title {
         font-size: 45px;
       }
     }
 
     &__download {
-      &--title {
+      &__title {
         font-size: 15px;
       }
 
-      &--parrafo {
+      &__parrafo {
         font-size: 13px;
       }
 
-      &--img {
+      &__img {
         width: 120px;
       }
     }
 
     &__links {
-      &--title {
+      &__title {
         font-size: 18px;
         width: 100px;
       }
