--- a/frontend/src/components/Navbar/Navbar.scss
+++ b/frontend/src/components/Navbar/Navbar.scss
@@ -38,7 +38,7 @@ $hover-color: rgb(217, 81, 81);
       text-decoration: none;
       font-size: 20px;
       color: $white-color;
-      border-bottom: 1px solid $white-color;
+      border-bottom: 1px solid $black-color;
       transition: border 300ms;
     }
 
@@ -75,6 +75,7 @@ $hover-color: rgb(217, 81, 81);
     &__menu--mobile,
     &__icons--mobile {
       display: none;
+      transition: all 300ms;
     }
 
     &__menu {
@@ -91,6 +92,7 @@ $hover-color: rgb(217, 81, 81);
         color: $black-color;
         transition: all 300ms;
         font-weight: 500;
+        border-bottom: 1px solid $white-color;
       }
 
       &__link:hover {
