--- a/frontend/src/Pages/FeaturedProducts/FeaturedProducts.scss
+++ b/frontend/src/Pages/FeaturedProducts/FeaturedProducts.scss
@@ -2,28 +2,53 @@
   padding: 25px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
-  gap: 15px;
+  gap: 10px;
+  margin: 25px 0;
 
   &__title {
     width: 100%;
     text-align: center;
-    margin: 35px 450px;
+    margin: 35px 0;
     font-weight: 200;
-    border-bottom: 1px solid #ccc;
   }
 
   &__product {
-    width: 250px;
-    height: 450px;
-    object-fit: cover;
-    border: 1px solid black;
+    width: 290px;
+    height: 515px;
+    margin: 5px 0;
+    padding: 10px;
+    transition: all 300ms;
 
     &__img {
       width: 100%;
-      height: 300px;
-      margin-bottom: 20px;
+      height: 350px;
+      object-fit: cover;
+      margin-bottom: 10px;
     }
+
+    &__title {
+      font-size: 20px;
+      font-weight: 200;
+      color: #000;
+    }
+
+    &__rating {
+      margin: 15px 0;
+      font-size: 18px;
+      color: #000;
+    }
+
+    &__price {
+      font-size: 20px;
+      font-weight: bold;
+      color: rgb(217, 81, 81);
+    }
+  }
+
+  &__product:hover {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 3px 8px;
+    transform: translateY(-5%);
   }
 }
