--- a/frontend/src/Pages/FeaturedProducts/FeaturedProducts.scss
+++ b/frontend/src/Pages/FeaturedProducts/FeaturedProducts.scss
@@ -5,7 +5,7 @@
   justify-content: space-between;
   align-items: center;
   gap: 10px;
-  margin: 25px 0;
+  margin: 25px 0 100px 0;
 
   &__title {
     width: 100%;
