--- a/frontend/src/Pages/UserAccess/UserAccess.scss
+++ b/frontend/src/Pages/UserAccess/UserAccess.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   background-color: rgb(241, 241, 241);
+  margin-top: 40px;
 
   &__components {
     width: 380px;
