--- a/frontend/src/Pages/Contact/Contact.scss
+++ b/frontend/src/Pages/Contact/Contact.scss
@@ -1,16 +1,24 @@
-.contact {
+.container {
   width: 100vw;
   height: 100vh;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  background: linear-gradient(#ffffff, #d7d7d7);
+}
+
+.contact {
+  width: 80%;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fff;
 
   &__email {
     color: #444;
     font-size: 35px;
-    background-color: #fff;
-    margin: 45px 0;
+    margin: 40px 0;
   }
 
   &__links {
