background gradient agregado a login y register

--- a/frontend/src/Pages/UserAccess/UserAccess.scss
+++ b/frontend/src/Pages/UserAccess/UserAccess.scss
@@ -4,8 +4,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(241, 241, 241);
   margin-top: 40px;
+  background: linear-gradient(#ffffff, #d7d7d7);
 
   &__components {
     width: 380px;
