--- a/frontend/src/components/Search/Search.scss
+++ b/frontend/src/components/Search/Search.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(241, 241, 241);
+  background: linear-gradient(#ffffff, #d7d7d7);
 
   &__input {
     width: 50%;
