--- a/frontend/src/components/Login/Login.scss
+++ b/frontend/src/components/Login/Login.scss
@@ -32,6 +32,7 @@ $shadow-color: #444;
       height: 100%;
       outline: none;
       color: $shadow-color;
+      margin-bottom: 8px;
     }
 
     .eye {
@@ -77,5 +78,22 @@ $shadow-color: #444;
 
   &__btn:hover {
     background-color: rgb(217, 81, 81, 0.9);
+  }
+
+  &__btn--disabled {
+    pointer-events: none;
+    opacity: 0.5;
+  }
+
+  &__input--error {
+    box-shadow: 0px 0px 3px rgb(195, 5, 5);
+  }
+
+  &__error {
+    display: block;
+    font-size: 12px;
+    font-weight: 500;
+    margin-left: -15px;
+    color: rgb(195, 5, 5);
   }
 }
