--- a/frontend/src/components/Register/Register.scss
+++ b/frontend/src/components/Register/Register.scss
@@ -6,7 +6,7 @@ $shadow-color: #444;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 30px 0;
+  margin: 3px 0;
 
   &__input {
     box-shadow: 0px 0px 3px $shadow-color;
@@ -32,12 +32,13 @@ $shadow-color: #444;
       height: 100%;
       outline: none;
       color: $shadow-color;
+      margin-bottom: 8px;
     }
 
     .eye {
       position: absolute;
       right: 15px;
-      top: 12px;
+      top: 14px;
       color: #444;
       cursor: pointer;
       transition: all 300ms;
@@ -51,7 +52,7 @@ $shadow-color: #444;
   &__btn {
     width: 85%;
     height: 50px;
-    margin: 40px 0;
+    margin: 35px 0;
     border: none;
     color: $white-color;
     font-size: 17px;
@@ -63,5 +64,22 @@ $shadow-color: #444;
 
   &__btn:hover {
     background-color: rgb(217, 81, 81, 0.9);
+  }
+
+  &__btn--disabled {
+    pointer-events: none;
+    opacity: 0.5;
+  }
+
+  &__input--error {
+    box-shadow: 0px 0px 3px rgb(195, 5, 5);
+  }
+
+  &__error {
+    display: block;
+    font-size: 12px;
+    font-weight: 500;
+    margin-left: -15px;
+    color: rgb(195, 5, 5);
   }
 }
