--- a/frontend/src/components/Navbar/Navbar.scss
+++ b/frontend/src/components/Navbar/Navbar.scss
@@ -51,11 +51,24 @@ $hover-color: rgb(217, 81, 81);
     @include flex(flex, wrap, row, space-between, stretch);
 
     &__item {
+      height: 35px;
       font-size: 25px;
       color: $white-color;
       cursor: pointer;
       margin: 0 5px;
       transition: color 300ms;
+    }
+
+    &__img {
+      width: 35px;
+      height: 35px;
+      border-radius: 50%;
+      object-fit: cover;
+      transition: opacity 300ms;
+    }
+
+    &__img:hover {
+      opacity: 0.8;
     }
 
     &__item:hover {
