--- a/frontend/src/Pages/Profile/Profile.scss
+++ b/frontend/src/Pages/Profile/Profile.scss
@@ -59,6 +59,10 @@
         cursor: pointer;
         background-color: rgb(17, 17, 17);
         transition: all 300ms;
+
+        .link {
+          color: #fff;
+        }
       }
 
       &__btn:hover {
